Добавил ColorProvider для доставания цвета для текстуры и также сделал, что активная модель только одна, для неактивной цвет более тусклый